infra/k8s/service-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-1
  namespace: service-1
spec:
  selector:
    app: service-1
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
