infra/k8s/service-1/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-1
  namespace: service-1
spec:
  hosts:
  - "service-1.local"
  gateways:
  - istio-system/mesh-gateway
  http:
  - route:
    - destination:
        host: service-1
        port:
          number: 80
